syntax = "proto3";

package budlum.network;

enum ProtoTransactionType {
    TRANSFER = 0;
    STAKE = 1;
    UNSTAKE = 2;
    VOTE = 3;
}

message ProtoTransaction {
    string from = 1;
    string to = 2;
    uint64 amount = 3;
    uint64 fee = 4;
    uint64 nonce = 5;
    bytes data = 6;
    string timestamp = 7; 
    string hash = 8;
    bytes signature = 9;
    uint64 chain_id = 10;
    ProtoTransactionType tx_type = 11;
}

message ProtoSlashingEvidence {
    ProtoBlockHeader header1 = 1;
    ProtoBlockHeader header2 = 2;
    bytes signature1 = 3;
    bytes signature2 = 4;
}

message ProtoBlockHeader {
    uint64 index = 1;
    string timestamp = 2; 
    string previous_hash = 3;
    string hash = 4;
    string producer = 5;
    uint64 chain_id = 6;
    string state_root = 7;
    string tx_root = 8;
    repeated ProtoSlashingEvidence slashing_evidence = 9;
    uint64 nonce = 10;
    uint64 epoch = 11;
    uint64 slot = 12;
    bytes vrf_output = 13;
    bytes vrf_proof = 14;
    string validator_set_hash = 15;
}

message ProtoBlock {
    uint64 index = 1;
    string timestamp = 2; 
    string previous_hash = 3;
    string hash = 4;
    repeated ProtoTransaction transactions = 5;
    uint64 nonce = 6;
    string producer = 7;
    bytes signature = 8;
    uint64 chain_id = 10;
    repeated ProtoSlashingEvidence slashing_evidence = 11;
    string state_root = 12;
    string tx_root = 13;
    uint64 epoch = 14;
    uint64 slot = 15;
    bytes vrf_output = 16;
    bytes vrf_proof = 17;
    string validator_set_hash = 18;
}

message ProtoNetworkMessage {
    oneof payload {
        ProtoHandshake handshake = 1;
        ProtoHandshakeAck handshake_ack = 2;
        ProtoBlock block = 3;
        ProtoTransaction transaction = 4;
        ProtoGetHeaders get_headers = 5;
        ProtoHeaders headers = 6;
        ProtoGetBlocksRange get_blocks_range = 7;
        ProtoBlocks blocks = 8;
        ProtoGetBlocksByHeight get_blocks_by_height = 9;
        ProtoBlocksByHeight blocks_by_height = 10;
        ProtoStateSnapshotResponse state_snapshot_response = 11;
        ProtoNewTip new_tip = 12;
        ProtoGetStateSnapshot get_state_snapshot = 13;
        ProtoSnapshotChunk snapshot_chunk = 14;
        ProtoPrevote prevote = 15;
        ProtoPrecommit precommit = 16;
        ProtoFinalityCert finality_cert = 17;
        ProtoGetQcBlob get_qc_blob = 18;
        ProtoQcBlobResponse qc_blob_response = 19;
    }
}

message ProtoHandshake {
    uint32 version_major = 1;
    uint32 version_minor = 2;
    uint64 chain_id = 3;
    uint64 best_height = 4;
    string validator_set_hash = 5;
    repeated string supported_schemes = 6;
}

message ProtoHandshakeAck {
    uint32 version_major = 1;
    uint32 version_minor = 2;
    uint64 chain_id = 3;
    uint64 best_height = 4;
    string validator_set_hash = 5;
    repeated string supported_schemes = 6;
}

message ProtoGetHeaders {
    repeated string locator = 1;
    uint32 limit = 2;
}

message ProtoHeaders {
    repeated ProtoBlockHeader headers = 1;
}

message ProtoGetBlocksRange {
    uint64 from_index = 1; 
    uint64 to_index = 2;
}

message ProtoBlocks {
    repeated ProtoBlock blocks = 1;
}

message ProtoGetBlocksByHeight {
    uint64 from_height = 1;
    uint64 to_height = 2;
}

message ProtoBlocksByHeight {
    repeated ProtoBlock blocks = 1;
}

message ProtoStateSnapshotResponse {
    uint64 height = 1;
    string state_root = 2;
    bool ok = 3;
}

message ProtoNewTip {
    uint64 height = 1;
    string hash = 2;
}

message ProtoGetStateSnapshot {
    uint64 height = 1;
}

message ProtoSnapshotChunk {
    uint64 height = 1;
    uint32 index = 2;
    uint32 total = 3;
    bytes data = 4;
}

message ProtoPrevote {
    uint64 epoch = 1;
    uint64 checkpoint_height = 2;
    string checkpoint_hash = 3;
    string voter_id = 4;
    bytes sig_bls = 5;
}

message ProtoPrecommit {
    uint64 epoch = 1;
    uint64 checkpoint_height = 2;
    string checkpoint_hash = 3;
    string voter_id = 4;
    bytes sig_bls = 5;
}

message ProtoFinalityCert {
    uint64 epoch = 1;
    uint64 checkpoint_height = 2;
    string checkpoint_hash = 3;
    bytes agg_sig_bls = 4;
    bytes bitmap = 5;
    string set_hash = 6;
}

message ProtoGetQcBlob {
    uint64 epoch = 1;
    uint64 checkpoint_height = 2;
}

message ProtoQcBlobResponse {
    uint64 epoch = 1;
    uint64 checkpoint_height = 2;
    string checkpoint_hash = 3;
    bytes blob_data = 4;
    bool found = 5;
}
